@@ -1451,11 +1451,13 @@ instead of $\equiv$, and they can be disabled by setting the
 The following are simplification rules for unary operators (applied
 from left to right, as usual):
 \begin{align*}
-  \X\F\G f & \equiv \F\G f & \F\X f           & \equiv \X\F f        & \G\X f          & \equiv \X\G f       \\
-  \X\G\F f & \equiv \G\F f & \F(f\U g)        & \equiv \F g          & \G(f \R g)      & \equiv \G g         \\
-           &               & \F(f\M g)        & \equiv \F (f\AND g)  & \G(f \W g)      & \equiv \G(f\OR g)   \\
-           &               & \F\G(f\AND \X g) & \equiv \F\G(f\AND g) & \G\F(f\OR \X g) & \equiv \G\F(f\OR g) \\
-           &               & \F\G(f\AND \G g) & \equiv \F\G(f\AND g) & \G\F(f\OR \F g) & \equiv \G\F(f\OR g) \\
+  \X\F\G f                                                    & \equiv \F\G f & \F(f\U g)        & \equiv \F g             & \G(f \R g)      & \equiv \G g             \\
+  \X\G\F f                                                    & \equiv \G\F f & \F(f\M g)        & \equiv \F (f\AND g)     & \G(f \W g)      & \equiv \G(f\OR g)       \\
+\F\X f                                                        & \equiv \X\F f & \F\G(f\AND \X g) & \equiv \F\G(f\AND g)    & \G\F(f\OR \X g) & \equiv \G\F(f\OR g)     \\
+\G\X f                                                        & \equiv \X\G f & \F\G(f\AND \G g) & \equiv \F\G(f\AND g)    & \G\F(f\OR \F g) & \equiv \G\F(f\OR g)     \\
+                                                              &               & \F\G(f\OR\G g)   & \equiv \F(\G f\OR\G g)  & \G\F(f\AND\F g) & \equiv \G(\F f\AND\F g) \\
+                                                              &               & \F\G(f\AND\F g)  & \equiV \F\G f\AND\G\F g & \G\F(f\AND\G g) & \equiV \G\F f\AND\F\G g \\
+                                                              &               & \F\G(f\OR\F g)  & \equivEU \F\G f\OR\G\F g & \G\F(f\OR\G g) & \equivEU \G\F f\OR\F\G g
 \end{align*}
 \begin{align*}
   \G(f_1\OR\ldots\OR f_n \OR \G\F(g_1)\OR\ldots\OR \G\F(g_m)) & \equiv \G(f_1\OR\ldots\OR f_n)\OR \G\F(g_1\OR\ldots\OR g_m)
